--- a/app/src/main/res/layout/donation_list_row.xml
+++ b/app/src/main/res/layout/donation_list_row.xml
@@ -18,18 +18,29 @@
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_height="wrap_content">
+
                 <ImageView
-                    android:scaleType="centerCrop"
                     android:layout_width="150dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/rice"/>
+                    android:layout_height="133dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/food" />
+
                 <LinearLayout
                     android:layout_marginLeft="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <TextView
-                        android:id="@+id/foodNameTV"
+                        android:id="@+id/nameTV"
+                        android:layout_width="match_parent"
+                        android:layout_height="39dp"
+                        android:text="Name"
+                        android:textColor="#3F51B5"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/CategoryTV"
                         android:layout_marginLeft="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -60,6 +71,13 @@
                         android:text="2:00:00"
                         android:textSize="20sp"
                         android:textColor="#3F51B5"/>
+
+                    <TextView
+                        android:id="@+id/phoneTv"
+                        android:layout_width="match_parent"
+                        android:layout_height="33dp"
+                        android:text="9823463758"
+                        android:textSize="20sp" />
                 </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
