--- a/app/src/main/res/layout/fragment_donation_information.xml
+++ b/app/src/main/res/layout/fragment_donation_information.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/nameET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Mr. Kalam Seikh"/>
+                android:hint="Mr. Kalam "/>
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
@@ -82,31 +82,37 @@
                 android:hint="29 shukrabad,Dhaka-1207" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/fname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="357dp"
+        android:layout_height="66dp"
         android:layout_below="@+id/address"
+        android:layout_marginTop="1dp"
+        android:background="@drawable/border_background"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
-            android:text="Food Name"
+            android:text="Category"
             android:textAllCaps="true"
             android:textColor="#3F51B5"
             android:textSize="18sp" />
 
+        <Spinner
+            android:id="@+id/Category"
+            style="@android:style/Widget.Holo.Light.Spinner"
+            android:layout_width="359dp"
+            android:layout_height="43dp" />
+
+        android:layout_alignParentRight="true"/>
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/foodNameET"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Rice" />
-        </com.google.android.material.textfield.TextInputLayout>
+
     </LinearLayout>
 
     <RelativeLayout
@@ -170,12 +176,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/date"
         android:orientation="vertical">
+
         <RelativeLayout
-            android:layout_marginRight="30dp"
-            android:padding="5dp"
-            android:background="@drawable/border_background"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/border_background"
+            android:padding="5dp">
+
             <TextView
                 android:id="@+id/timeET"
                 android:layout_width="wrap_content"
@@ -184,18 +192,21 @@
                 android:textAllCaps="true"
                 android:textColor="#3F51B5"
                 android:textSize="18sp" />
+
             <ImageView
-                android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/time"/>
+                android:layout_alignParentRight="true"
+                android:src="@drawable/time" />
         </RelativeLayout>
     </LinearLayout>
+
     <RelativeLayout
-        android:layout_below="@+id/time"
-        android:layout_margin="20dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="159dp"
+        android:layout_below="@+id/time"
+        android:layout_marginTop="76dp"
+        android:layout_marginBottom="20dp">
 
         <Button
             android:id="@+id/confirmBtn"
@@ -206,12 +217,12 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="28dp"
             android:layout_marginLeft="28dp"
-            android:layout_marginTop="1dp"
+            android:layout_marginTop="85dp"
+            android:background="#3F51B5"
             android:paddingLeft="25dp"
             android:paddingRight="25dp"
-            android:background="#3F51B5"
-            android:textColor="#fff"
-            android:text="Confirm" />
+            android:text="Confirm"
+            android:textColor="#fff" />
 
         <Button
             android:id="@+id/cancelBtn"
@@ -220,14 +231,14 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="1dp"
-            android:layout_marginEnd="46dp"
-            android:layout_marginRight="46dp"
+            android:layout_marginTop="84dp"
+            android:layout_marginEnd="49dp"
+            android:layout_marginRight="49dp"
+            android:background="#3F51B5"
             android:paddingLeft="25dp"
             android:paddingRight="25dp"
-            android:background="#3F51B5"
-            android:textColor="#fff"
-            android:text="cancel" />
+            android:text="cancel"
+            android:textColor="#fff" />
     </RelativeLayout>
 
 </RelativeLayout>
