--- a/app/src/main/res/layout/fragment_start_page.xml
+++ b/app/src/main/res/layout/fragment_start_page.xml
@@ -31,7 +31,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="39dp"
             android:layout_marginRight="39dp"
-            android:text="Donator"
+            android:text="Donor"
             android:textAllCaps="true"
             android:textSize="25sp"
             android:textStyle="bold" />
